# tree-sitter-stan

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  crater.sh  go.mod  grammar.js  grammar.txt  package-lock.json  package.json  pyproject.toml  setup.py  shadowing.stan  tree-sitter.json
.github/workflows/: main.yml  release.yml
bindings/c/: tree-sitter-stan.pc.in  tree-sitter-stanfunctions.pc.in
bindings/c/tree_sitter/: tree-sitter-stan.h  tree-sitter-stanfunctions.h
bindings/go/: binding.go  binding_stan.go  binding_stanfunctions.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js  stan.js  stanfunctions.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_stan/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterStanTests/: TreeSitterStanTests.swift
common/: common.mak
grammars/stan/: CMakeLists.txt  Makefile  grammar.txt  package.json
grammars/stan/src/: grammar.json  parser.c
grammars/stanfunctions/: CMakeLists.txt  Makefile  grammar.js  package.json
grammars/stanfunctions/src/: grammar.json  node-types.json  parser.c
queries/: highlights.scm  locals.scm  sf-highlights.scm  sf-locals.scm  tags.scm  update.sh
src/: grammar.json  node-types.json  parser.c
test/corpus/: blocks.txt  error.txt  example-models.txt  literals.stan  mother.txt  tuples.txt
test/highlight/: highlight.stan  highlight.stanfunctions  incomplete.stan
test/tags/: tags.stan
(+1 files in other folders)
