[package]
name = "tree-sitter-stan"
description = "stan grammar for the tree-sitter parsing library"
version = "0.3.1"
keywords = ["incremental", "parsing", "stan"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-stan"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "queries/*",
  "grammars/stan/grammar.js",
  "grammars/stan/src/*",
  "grammars/stanfunctions/grammar.js",
  "grammars/stanfunctions/src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.23"
